--- a/spec/vcr/YelpClient/finds_a_location_by_id.yml
+++ b/spec/vcr/YelpClient/finds_a_location_by_id.yml
@@ -24,36 +24,36 @@ http_interactions:
       - keep-alive
       Content-Type:
       - application/json
+      X-Zipkin-Id:
+      - 43cfc8498ecd8afe
+      Ratelimit-Resettime:
+      - '2021-11-05T00:00:00+00:00'
       X-B3-Sampled:
       - '0'
       X-Routing-Service:
-      - routing-main--useast1-b9c656cb7-bsrfv; site=public_api_v3
-      X-Zipkin-Id:
-      - 35724ee219266d15
-      Ratelimit-Dailylimit:
-      - '5000'
+      - routing-main--useast1-b9c656cb7-x8ncw; site=public_api_v3
       Server:
       - envoy
+      Ratelimit-Dailylimit:
+      - '5000'
       Ratelimit-Remaining:
-      - '4953'
-      Ratelimit-Resettime:
-      - '2021-11-05T00:00:00+00:00'
+      - '4944'
       X-Cloudmap:
       - routing_useast1
       X-Proxied:
-      - 10-65-91-109-useast1aprod
+      - 10-65-73-48-useast1aprod
       X-Extlb:
-      - 10-65-91-109-useast1aprod
+      - 10-65-73-48-useast1aprod
       Cache-Control:
       - max-age=0, no-store, private, no-transform
       Accept-Ranges:
       - bytes
       Date:
-      - Thu, 04 Nov 2021 18:15:07 GMT
+      - Thu, 04 Nov 2021 20:18:02 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-ewr18162-EWR
+      - cache-dal21282-DAL
       X-Cache:
       - MISS
       X-Cache-Hits:
@@ -83,8 +83,8 @@ http_interactions:
         "start": "1100", "end": "1400", "day": 4}, {"is_overnight": false, "start":
         "1530", "end": "2000", "day": 4}, {"is_overnight": false, "start": "1200",
         "end": "2000", "day": 5}, {"is_overnight": false, "start": "1200", "end":
-        "2000", "day": 6}], "hours_type": "REGULAR", "is_open_now": true}], "transactions":
-        ["pickup", "delivery"], "messaging": {"url": "https://www.yelp.com/raq/RTvR4W7K-59xFFZAUTMTbQ?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=OBMoK3r2ftITcAO2w2E5Ew#popup%3Araq",
+        "2000", "day": 6}], "hours_type": "REGULAR", "is_open_now": false}], "transactions":
+        ["delivery", "pickup"], "messaging": {"url": "https://www.yelp.com/raq/RTvR4W7K-59xFFZAUTMTbQ?adjust_creative=OBMoK3r2ftITcAO2w2E5Ew&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_lookup&utm_source=OBMoK3r2ftITcAO2w2E5Ew#popup%3Araq",
         "use_case_text": "Message the Business"}}'
-  recorded_at: Thu, 04 Nov 2021 18:15:07 GMT
+  recorded_at: Thu, 04 Nov 2021 20:18:02 GMT
 recorded_with: VCR 6.0.0
