--- a/spec/vcr/yelp_locations_show/with_valid_params/renders_locations_information.yml
+++ b/spec/vcr/yelp_locations_show/with_valid_params/renders_locations_information.yml
@@ -24,36 +24,36 @@ http_interactions:
       - keep-alive
       Content-Type:
       - application/json
-      X-Zipkin-Id:
-      - 862e9e0350aa8361
-      X-Routing-Service:
-      - routing-main--useast1-b9c656cb7-nmh8g; site=public_api_v3
       Ratelimit-Dailylimit:
       - '5000'
       Ratelimit-Remaining:
-      - '4955'
-      X-B3-Sampled:
-      - '0'
+      - '4940'
       Server:
       - envoy
       Ratelimit-Resettime:
       - '2021-11-05T00:00:00+00:00'
+      X-B3-Sampled:
+      - '0'
+      X-Routing-Service:
+      - routing-main--useast1-b9c656cb7-lmdvk; site=public_api_v3
+      X-Zipkin-Id:
+      - 0c07154568857ae4
       X-Cloudmap:
       - routing_useast1
       X-Proxied:
-      - 10-65-190-140-useast1bprod
+      - 10-65-91-109-useast1aprod
       X-Extlb:
-      - 10-65-190-140-useast1bprod
+      - 10-65-91-109-useast1aprod
       Cache-Control:
       - max-age=0, no-store, private, no-transform
       Accept-Ranges:
       - bytes
       Date:
-      - Thu, 04 Nov 2021 18:14:52 GMT
+      - Thu, 04 Nov 2021 20:18:04 GMT
       Via:
       - 1.1 varnish
       X-Served-By:
-      - cache-lga21942-LGA
+      - cache-dal21222-DAL
       X-Cache:
       - MISS
       X-Cache-Hits:
@@ -83,6 +83,6 @@ http_interactions:
         false, "start": "1100", "end": "2200", "day": 4}, {"is_overnight": false,
         "start": "1100", "end": "2200", "day": 5}, {"is_overnight": false, "start":
         "1100", "end": "2200", "day": 6}], "hours_type": "REGULAR", "is_open_now":
-        true}], "transactions": ["pickup", "delivery"]}'
-  recorded_at: Thu, 04 Nov 2021 18:14:52 GMT
+        true}], "transactions": ["delivery", "pickup"]}'
+  recorded_at: Thu, 04 Nov 2021 20:18:04 GMT
 recorded_with: VCR 6.0.0
